--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="bg-text">
       <h1 style="font-size: 40px">I am Vaibhav Kumar</h1>
       <h2>And I'm a Web Developer</h2>
-      <button class="btn">Connect With Me</button>
+      <button class="btn"><a href="https://www.linkedin.com/in/vaibhav-kumar-305995201/">Connect With Me<a></button>
       <p class="change">Get a Coffee until it's Loading</p>
       <div class="loading-text">0%</div>
     </div>
